assets/package.json: mathjax >=2.7.4 (CVE-2018-1999024)

--- a/assets/package.json
+++ b/assets/package.json
@@ -17,7 +17,7 @@
     "datatables.net-bs": "1.x.x",
     "font-awesome": "4.x.x",
     "jquery": "3.x.x",
-    "mathjax": "2.x.x",
+    "mathjax": ">=2.7.4",
     "onesignal-emoji-picker": "1.x.x",
     "pygments-css": "1.x.x",
     "select2": "4.x.x"
